fix: improve hero text alignment and font weight

--- a/src/containers/HomeView/Hero/Hero.module.scss
+++ b/src/containers/HomeView/Hero/Hero.module.scss
@@ -13,7 +13,7 @@
 
 .HeroContainer {
   align-content: center;
-  align-items: center;
+  align-items: flex-start;
   display: grid;
   column-gap: var(--s3);
   grid-template-columns: 1fr 1fr 1fr;
@@ -37,10 +37,10 @@
 }
 
 .HeroText {
-  composes: h4 from global;
   grid-column: 1 / 3;
   grid-row: 2 / 3;
-  max-width: 70ch;
+  text-transform: uppercase;
+  letter-spacing: 0.3em;
 }
 
 .HeroButton {
